bt_lexer.cpp
/* Generated by re2c 0.14.3 on Wed Apr 12 15:34:41 2017 */
#line 1 "bt_lexer.re"
#include "bt_lexer.h"
#include "bt_parser.h"

#define TOKEN_STRING string(start, this->_cursor - start)
#define TOKEN_STRING_LITERAL string(start + 1, this->_cursor - (start + 2))

#define UNKNOWN_TOKEN cout << "Unknown token '" << TOKEN_STRING << "' near line " << currentline << endl; \
                              continue;

#define TOKENIZE(token_type) token.value = TOKEN_STRING; \
                             token.type = token_type;    \
                             token.line = currentline;   \
                             tokens.push_back(token);    \
                             continue;

#define TOKENIZE_STRING_LITERAL(token_type) token.value = TOKEN_STRING_LITERAL; \
                                            token.type = token_type;    \
                                            token.line = currentline;   \
                                            tokens.push_back(token);    \
                                            continue;

BTLexer::BTLexer(const char* s): _cursor(s), _start(NULL), _marker(NULL)
{
}

string BTLexer::getString(const char* start, const char* end) const
{
    return string(start, end - start);
}

list<BTLexer::Token> BTLexer::lex()
{
    list<BTLexer::Token> tokens;
    unsigned int currentline = 0;

    for(; ;)
    {
        Token token;
        const char* start = this->_cursor;

        
#line 45 "bt_lexer.cpp"
{
	char yych;
	unsigned int yyaccept = 0;

	yych = *this->_cursor;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\r':
	case ' ':
	case '\\':	goto yy6;
	case '\n':	goto yy8;
	case '!':	goto yy10;
	case '"':	goto yy12;
	case '%':	goto yy13;
	case '&':	goto yy15;
	case '\'':	goto yy17;
	case '(':	goto yy18;
	case ')':	goto yy20;
	case '*':	goto yy22;
	case '+':	goto yy24;
	case ',':	goto yy26;
	case '-':	goto yy28;
	case '.':	goto yy30;
	case '/':	goto yy32;
	case '0':	goto yy34;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy36;
	case ':':	goto yy38;
	case ';':	goto yy40;
	case '<':	goto yy42;
	case '=':	goto yy44;
	case '>':	goto yy46;
	case '?':	goto yy48;
	case 'A':
	case 'E':
	case 'G':
	case 'J':
	case 'K':
	case 'M':
	case 'N':
	case 'P':
	case 'R':
	case 'T':
	case 'V':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'g':
	case 'j':
	case 'k':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'x':
	case 'y':
	case 'z':	goto yy50;
	case 'B':	goto yy52;
	case 'C':	goto yy53;
	case 'D':	goto yy54;
	case 'F':	goto yy55;
	case 'H':	goto yy56;
	case 'I':	goto yy57;
	case 'L':	goto yy58;
	case 'O':	goto yy59;
	case 'Q':	goto yy60;
	case 'S':	goto yy61;
	case 'U':	goto yy62;
	case 'W':	goto yy63;
	case '[':	goto yy64;
	case ']':	goto yy66;
	case '^':	goto yy68;
	case '_':	goto yy70;
	case 'b':	goto yy71;
	case 'c':	goto yy72;
	case 'd':	goto yy73;
	case 'e':	goto yy74;
	case 'f':	goto yy75;
	case 'h':	goto yy76;
	case 'i':	goto yy77;
	case 'l':	goto yy78;
	case 'q':	goto yy79;
	case 'r':	goto yy80;
	case 's':	goto yy81;
	case 't':	goto yy82;
	case 'u':	goto yy83;
	case 'v':	goto yy84;
	case 'w':	goto yy85;
	case '{':	goto yy86;
	case '|':	goto yy88;
	case '}':	goto yy90;
	case '~':	goto yy92;
	default:	goto yy4;
	}
yy2:
	++this->_cursor;
#line 59 "bt_lexer.re"
	{ break; }
#line 153 "bt_lexer.cpp"
yy4:
	++this->_cursor;
yy5:
#line 169 "bt_lexer.re"
	{ UNKNOWN_TOKEN }
#line 159 "bt_lexer.cpp"
yy6:
	++this->_cursor;
	yych = *this->_cursor;
	goto yy471;
yy7:
#line 61 "bt_lexer.re"
	{ continue; }
#line 167 "bt_lexer.cpp"
yy8:
	++this->_cursor;
yy9:
#line 60 "bt_lexer.re"
	{ currentline++; continue; }
#line 173 "bt_lexer.cpp"
yy10:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '=':	goto yy468;
	default:	goto yy11;
	}
yy11:
#line 83 "bt_lexer.re"
	{ TOKENIZE(BTT_LOG_NOT) }
#line 183 "bt_lexer.cpp"
yy12:
	yyaccept = 0;
	yych = *(this->_marker = ++this->_cursor);
	goto yy366;
yy13:
	++this->_cursor;
#line 109 "bt_lexer.re"
	{ TOKENIZE(BTT_MOD) }
#line 192 "bt_lexer.cpp"
yy15:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '&':	goto yy466;
	case '=':	goto yy464;
	default:	goto yy16;
	}
yy16:
#line 76 "bt_lexer.re"
	{ TOKENIZE(BTT_BIN_AND) }
#line 203 "bt_lexer.cpp"
yy17:
	yyaccept = 0;
	yych = *(this->_marker = ++this->_cursor);
	switch (yych) {
	case '"':	goto yy5;
	default:	goto yy371;
	}
yy18:
	++this->_cursor;
#line 63 "bt_lexer.re"
	{ TOKENIZE(BTT_O_ROUND)   }
#line 215 "bt_lexer.cpp"
yy20:
	++this->_cursor;
#line 64 "bt_lexer.re"
	{ TOKENIZE(BTT_C_ROUND)   }
#line 220 "bt_lexer.cpp"
yy22:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '=':	goto yy462;
	default:	goto yy23;
	}
yy23:
#line 107 "bt_lexer.re"
	{ TOKENIZE(BTT_MUL) }
#line 230 "bt_lexer.cpp"
yy24:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '+':	goto yy458;
	case '=':	goto yy460;
	default:	goto yy25;
	}
yy25:
#line 105 "bt_lexer.re"
	{ TOKENIZE(BTT_ADD) }
#line 241 "bt_lexer.cpp"
yy26:
	++this->_cursor;
#line 69 "bt_lexer.re"
	{ TOKENIZE(BTT_COMMA)     }
#line 246 "bt_lexer.cpp"
yy28:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '-':	goto yy454;
	case '=':	goto yy456;
	default:	goto yy29;
	}
yy29:
#line 106 "bt_lexer.re"
	{ TOKENIZE(BTT_SUB) }
#line 257 "bt_lexer.cpp"
yy30:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy434;
	default:	goto yy31;
	}
yy31:
#line 70 "bt_lexer.re"
	{ TOKENIZE(BTT_DOT)       }
#line 276 "bt_lexer.cpp"
yy32:
	yyaccept = 1;
	yych = *(this->_marker = ++this->_cursor);
	switch (yych) {
	case '*':	goto yy447;
	case '/':	goto yy449;
	case '=':	goto yy445;
	default:	goto yy33;
	}
yy33:
#line 108 "bt_lexer.re"
	{ TOKENIZE(BTT_DIV) }
#line 289 "bt_lexer.cpp"
yy34:
	yyaccept = 2;
	yych = *(this->_marker = ++this->_cursor);
	switch (yych) {
	case '.':	goto yy434;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy438;
	case '8':
	case '9':	goto yy440;
	case 'x':	goto yy437;
	default:	goto yy35;
	}
yy35:
#line 163 "bt_lexer.re"
	{ TOKENIZE(BTT_LITERAL_OCT)                   }
#line 311 "bt_lexer.cpp"
yy36:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '.':	goto yy434;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy432;
	default:	goto yy37;
	}
yy37:
#line 164 "bt_lexer.re"
	{ TOKENIZE(BTT_LITERAL_DEC)                   }
#line 331 "bt_lexer.cpp"
yy38:
	++this->_cursor;
#line 72 "bt_lexer.re"
	{ TOKENIZE(BTT_COLON)     }
#line 336 "bt_lexer.cpp"
yy40:
	++this->_cursor;
#line 71 "bt_lexer.re"
	{ TOKENIZE(BTT_SEMICOLON) }
#line 341 "bt_lexer.cpp"
yy42:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '<':	goto yy426;
	case '=':	goto yy428;
	default:	goto yy43;
	}
yy43:
#line 87 "bt_lexer.re"
	{ TOKENIZE(BTT_LT) }
#line 352 "bt_lexer.cpp"
yy44:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '=':	goto yy424;
	default:	goto yy45;
	}
yy45:
#line 73 "bt_lexer.re"
	{ TOKENIZE(BTT_ASSIGN)    }
#line 362 "bt_lexer.cpp"
yy46:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '=':	goto yy420;
	case '>':	goto yy418;
	default:	goto yy47;
	}
yy47:
#line 88 "bt_lexer.re"
	{ TOKENIZE(BTT_GT) }
#line 373 "bt_lexer.cpp"
yy48:
	++this->_cursor;
#line 74 "bt_lexer.re"
	{ TOKENIZE(BTT_QUESTION)  }
#line 378 "bt_lexer.cpp"
yy50:
	++this->_cursor;
	yych = *this->_cursor;
	goto yy99;
yy51:
#line 161 "bt_lexer.re"
	{ TOKENIZE(BTT_IDENTIFIER)                    }
#line 386 "bt_lexer.cpp"
yy52:
	yych = *++this->_cursor;
	switch (yych) {
	case 'Y':	goto yy416;
	default:	goto yy99;
	}
yy53:
	yych = *++this->_cursor;
	switch (yych) {
	case 'H':	goto yy414;
	default:	goto yy99;
	}
yy54:
	yych = *++this->_cursor;
	switch (yych) {
	case 'O':	goto yy396;
	case 'W':	goto yy397;
	default:	goto yy99;
	}
yy55:
	yych = *++this->_cursor;
	switch (yych) {
	case 'I':	goto yy385;
	case 'L':	goto yy386;
	default:	goto yy99;
	}
yy56:
	yych = *++this->_cursor;
	switch (yych) {
	case 'F':	goto yy381;
	default:	goto yy99;
	}
yy57:
	yych = *++this->_cursor;
	switch (yych) {
	case 'N':	goto yy376;
	default:	goto yy99;
	}
yy58:
	yyaccept = 3;
	yych = *(this->_marker = ++this->_cursor);
	switch (yych) {
	case '"':	goto yy365;
	case '\'':	goto yy367;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy98;
	case 'O':	goto yy369;
	default:	goto yy51;
	}
yy59:
	yych = *++this->_cursor;
	switch (yych) {
	case 'L':	goto yy358;
	default:	goto yy99;
	}
yy60:
	yych = *++this->_cursor;
	switch (yych) {
	case 'U':	goto yy353;
	case 'W':	goto yy354;
	default:	goto yy99;
	}
yy61:
	yych = *++this->_cursor;
	switch (yych) {
	case 'H':	goto yy350;
	default:	goto yy99;
	}
yy62:
	yych = *++this->_cursor;
	switch (yych) {
	case 'B':	goto yy328;
	case 'C':	goto yy329;
	case 'I':	goto yy330;
	case 'L':	goto yy331;
	case 'Q':	goto yy332;
	case 'S':	goto yy333;
	default:	goto yy99;
	}
yy63:
	yych = *++this->_cursor;
	switch (yych) {
	case 'O':	goto yy326;
	default:	goto yy99;
	}
yy64:
	++this->_cursor;
#line 65 "bt_lexer.re"
	{ TOKENIZE(BTT_O_SQUARE)  }
#line 536 "bt_lexer.cpp"
yy66:
	++this->_cursor;
#line 66 "bt_lexer.re"
	{ TOKENIZE(BTT_C_SQUARE)  }
#line 541 "bt_lexer.cpp"
yy68:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '=':	goto yy324;
	default:	goto yy69;
	}
yy69:
#line 78 "bt_lexer.re"
	{ TOKENIZE(BTT_BIN_XOR) }
#line 551 "bt_lexer.cpp"
yy70:
	yych = *++this->_cursor;
	switch (yych) {
	case '_':	goto yy314;
	default:	goto yy99;
	}
yy71:
	yych = *++this->_cursor;
	switch (yych) {
	case 'o':	goto yy301;
	case 'r':	goto yy302;
	case 'y':	goto yy303;
	default:	goto yy99;
	}
yy72:
	yych = *++this->_cursor;
	switch (yych) {
	case 'a':	goto yy282;
	case 'h':	goto yy283;
	case 'o':	goto yy284;
	default:	goto yy99;
	}
yy73:
	yych = *++this->_cursor;
	switch (yych) {
	case 'e':	goto yy268;
	case 'o':	goto yy269;
	default:	goto yy99;
	}
yy74:
	yych = *++this->_cursor;
	switch (yych) {
	case 'l':	goto yy260;
	case 'n':	goto yy261;
	default:	goto yy99;
	}
yy75:
	yych = *++this->_cursor;
	switch (yych) {
	case 'a':	goto yy247;
	case 'l':	goto yy248;
	case 'o':	goto yy249;
	default:	goto yy99;
	}
yy76:
	yych = *++this->_cursor;
	switch (yych) {
	case 'f':	goto yy241;
	default:	goto yy99;
	}
yy77:
	yych = *++this->_cursor;
	switch (yych) {
	case 'f':	goto yy234;
	case 'n':	goto yy236;
	default:	goto yy99;
	}
yy78:
	yych = *++this->_cursor;
	switch (yych) {
	case 'o':	goto yy226;
	default:	goto yy99;
	}
yy79:
	yych = *++this->_cursor;
	switch (yych) {
	case 'u':	goto yy222;
	default:	goto yy99;
	}
yy80:
	yych = *++this->_cursor;
	switch (yych) {
	case 'e':	goto yy216;
	default:	goto yy99;
	}
yy81:
	yych = *++this->_cursor;
	switch (yych) {
	case 'h':	goto yy184;
	case 'i':	goto yy185;
	case 't':	goto yy186;
	case 'w':	goto yy187;
	default:	goto yy99;
	}
yy82:
	yych = *++this->_cursor;
	switch (yych) {
	case 'i':	goto yy167;
	case 'r':	goto yy168;
	case 'y':	goto yy169;
	default:	goto yy99;
	}
yy83:
	yych = *++this->_cursor;
	switch (yych) {
	case 'b':	goto yy123;
	case 'c':	goto yy124;
	case 'i':	goto yy125;
	case 'l':	goto yy126;
	case 'n':	goto yy127;
	case 'q':	goto yy128;
	case 's':	goto yy129;
	default:	goto yy99;
	}
yy84:
	yych = *++this->_cursor;
	switch (yych) {
	case 'o':	goto yy119;
	default:	goto yy99;
	}
yy85:
	yych = *++this->_cursor;
	switch (yych) {
	case 'c':	goto yy100;
	case 'h':	goto yy101;
	case 's':	goto yy102;
	default:	goto yy99;
	}
yy86:
	++this->_cursor;
#line 67 "bt_lexer.re"
	{ TOKENIZE(BTT_O_CURLY)   }
#line 674 "bt_lexer.cpp"
yy88:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '=':	goto yy94;
	case '|':	goto yy96;
	default:	goto yy89;
	}
yy89:
#line 77 "bt_lexer.re"
	{ TOKENIZE(BTT_BIN_OR)  }
#line 685 "bt_lexer.cpp"
yy90:
	++this->_cursor;
#line 68 "bt_lexer.re"
	{ TOKENIZE(BTT_C_CURLY)   }
#line 690 "bt_lexer.cpp"
yy92:
	++this->_cursor;
#line 79 "bt_lexer.re"
	{ TOKENIZE(BTT_BIN_NOT) }
#line 695 "bt_lexer.cpp"
yy94:
	++this->_cursor;
#line 97 "bt_lexer.re"
	{ TOKENIZE(BTT_OR_ASSIGN)     }
#line 700 "bt_lexer.cpp"
yy96:
	++this->_cursor;
#line 82 "bt_lexer.re"
	{ TOKENIZE(BTT_LOG_OR)  }
#line 705 "bt_lexer.cpp"
yy98:
	++this->_cursor;
	yych = *this->_cursor;
yy99:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy98;
	default:	goto yy51;
	}
yy100:
	yych = *++this->_cursor;
	switch (yych) {
	case 'h':	goto yy113;
	default:	goto yy99;
	}
yy101:
	yych = *++this->_cursor;
	switch (yych) {
	case 'i':	goto yy109;
	default:	goto yy99;
	}
yy102:
	yych = *++this->_cursor;
	switch (yych) {
	case 't':	goto yy103;
	default:	goto yy99;
	}
yy103:
	yych = *++this->_cursor;
	switch (yych) {
	case 'r':	goto yy104;
	default:	goto yy99;
	}
yy104:
	yych = *++this->_cursor;
	switch (yych) {
	case 'i':	goto yy105;
	default:	goto yy99;
	}
yy105:
	yych = *++this->_cursor;
	switch (yych) {
	case 'n':	goto yy106;
	default:	goto yy99;
	}
yy106:
	yych = *++this->_cursor;
	switch (yych) {
	case 'g':	goto yy107;
	default:	goto yy99;
	}
yy107:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy98;
	default:	goto yy108;
	}
yy108:
#line 116 "bt_lexer.re"
	{ TOKENIZE(BTT_WSTRING)  }
#line 889 "bt_lexer.cpp"
yy109:
	yych = *++this->_cursor;
	switch (yych) {
	case 'l':	goto yy110;
	default:	goto yy99;
	}
yy110:
	yych = *++this->_cursor;
	switch (yych) {
	case 'e':	goto yy111;
	default:	goto yy99;
	}
yy111:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy98;
	default:	goto yy112;
	}
yy112:
#line 153 "bt_lexer.re"
	{ TOKENIZE(BTT_WHILE)    }
#line 973 "bt_lexer.cpp"
yy113:
	yych = *++this->_cursor;
	switch (yych) {
	case 'a':	goto yy114;
	default:	goto yy99;
	}
yy114:
	yych = *++this->_cursor;
	switch (yych) {
	case 'r':	goto yy115;
	default:	goto yy99;
	}
yy115:
	yych = *++this->_cursor;
	switch (yych) {
	case '_':	goto yy116;
	default:	goto yy99;
	}
yy116:
	yych = *++this->_cursor;
	switch (yych) {
	case 't':	goto yy117;
	default:	goto yy99;
	}
yy117:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy98;
	default:	goto yy118;
	}
yy118:
#line 117 "bt_lexer.re"
	{ TOKENIZE(BTT_WCHAR)    }
#line 1069 "bt_lexer.cpp"
yy119:
	yych = *++this->_cursor;
	switch (yych) {
	case 'i':	goto yy120;
	default:	goto yy99;
	}
yy120:
	yych = *++this->_cursor;
	switch (yych) {
	case 'd':	goto yy121;
	default:	goto yy99;
	}
yy121:
	++this->_cursor;
	switch ((yych = *this->_cursor)) {
